# mem2graph

./: .env.onyr.bk  .gitignore  Cargo.toml  README.md  WORKLOG.md  clean_data_dirs.py  flake.nix  run_pipelines.py
data/: .gitignore
src/: main.rs
src/mem_to_graph/: .env  .env.bk  .env.onyr.bk  .env.server.bk  .envrc  .gitignore  Cargo.toml  README.md  example.py  flake.nix  setup.py  shell.nix
src/mem_to_graph/data/: .gitignore
src/mem_to_graph/graphs/: remove_vn.py
src/mem_to_graph/graphs/csv_embedding/tmp/: test_302-1644391327_embedding_v0.csv  test_302-1644391327_embedding_v1.csv
src/mem_to_graph/graphs/graphs/: test_graph_from_302-1644391327.gv
src/mem_to_graph/graphs/graphs_no_vn/: test_graph_from_302-1644391327_no_vn.gv
src/mem_to_graph/src/: lib.rs  main.rs  params.rs  tests.rs
src/mem_to_graph/src/exe_pipeline/: mod.rs
src/mem_to_graph/src/exe_pipeline/extract_dts_data/: mod.rs
src/mem_to_graph/src/exe_pipeline/graph_generation/: mod.rs
src/mem_to_graph/src/exe_pipeline/semantic_dtn_embedding/: mod.rs
src/mem_to_graph/src/exe_pipeline/statistic_dtn_embedding/: mod.rs
src/mem_to_graph/src/exe_pipeline/value_embedding/: mod.rs
src/mem_to_graph/src/graph_annotate/: mod.rs
src/mem_to_graph/src/graph_data/: heap_dump_data.rs  mod.rs
src/mem_to_graph/src/graph_embedding/: mod.rs
src/mem_to_graph/src/graph_structs/: mod.rs
src/mem_to_graph/src/params/: argv.rs  mod.rs
src/mem_to_graph/src/tests/: mod.rs
src/mem_to_graph/src/tests/graph_structs/: mod.rs
src/mem_to_graph/src/utils/: mod.rs
src/mem_to_graph/tests/: remove_vn.py
(+64 files in other folders)
