[package]
name = "mem_to_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
dotenv = "0.15.0"
either = "1.8.1"
env_logger = "0.10.0"
fern = "0.6.2"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
petgraph = "0.6.3"
rayon = "1.7.0"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.94"
walkdir = "2.3.3"
